<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:fillViewport="true"
    tools:context=".ui.profile.NewPostFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_rectangle_shape"
        android:backgroundTint="?attr/colorOnBackground"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/new_post"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_rectangle_shape"
            android:backgroundTint="?attr/backgroundColor"
            android:orientation="vertical"
            android:padding="10dp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_post_layout_text_input"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:hint="@string/write_something">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_post_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine"
                    android:maxLength="1000" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/new_post_image_view"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/image_to_upload"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/new_post_upload_file_btn"
                style="@style/button.primary"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/add_file" />

            <TextView
                android:id="@+id/new_post_error_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textColor="?attr/colorTertiary"
                android:textSize="14sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/new_post_success_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:textSize="14sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/new_post_progress_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/new_post_text_loading"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/sending_form_in_progress"
                    android:textAlignment="center" />

                <ProgressBar
                    android:id="@+id/new_post_progress_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:indeterminateBehavior="cycle"
                    android:visibility="visible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginVertical="10dp"
                android:gravity="fill_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/new_post_back_btn"
                    style="@style/button.secondary"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/back" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/new_post_submit_btn"
                    style="@style/button.primary"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/publish" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>